Add `gigahost_dns_zone` resource
