# internal/resource_dns_zone/dns_zone_resource_gen.go
@@ -1,0 +1,57 @@
+// Code generated by terraform-plugin-framework-generator DO NOT EDIT.
+
+package resource_dns_zone
+
+import (
+	"context"
+	"github.com/hashicorp/terraform-plugin-framework/types"
+
+	"github.com/hashicorp/terraform-plugin-framework/resource/schema"
+)
+
+func DnsZoneResourceSchema(ctx context.Context) schema.Schema {
+	return schema.Schema{
+		Attributes: map[string]schema.Attribute{
+			"external_dns": schema.BoolAttribute{
+				Computed:            true,
+				Description:         "Whether the zone is served by external nameservers.",
+				MarkdownDescription: "Whether the zone is served by external nameservers.",
+			},
+			"zone_active": schema.BoolAttribute{
+				Computed:            true,
+				Description:         "Whether the zone is active.",
+				MarkdownDescription: "Whether the zone is active.",
+			},
+			"zone_id": schema.StringAttribute{
+				Computed:            true,
+				Description:         "Zone id.",
+				MarkdownDescription: "Zone id.",
+			},
+			"zone_name": schema.StringAttribute{
+				Required:            true,
+				Description:         "Domain name.",
+				MarkdownDescription: "Domain name.",
+			},
+			"zone_protected": schema.BoolAttribute{
+				Computed:            true,
+				Description:         "Whether the zone is protected against deletion.",
+				MarkdownDescription: "Whether the zone is protected against deletion.",
+			},
+			"zone_type": schema.StringAttribute{
+				Optional:            true,
+				Computed:            true,
+				Description:         "Zone type (NATIVE, MASTER, or SLAVE).",
+				MarkdownDescription: "Zone type (NATIVE, MASTER, or SLAVE).",
+			},
+		},
+	}
+}
+
+type DnsZoneModel struct {
+	ExternalDns   types.Bool   `tfsdk:"external_dns"`
+	ZoneActive    types.Bool   `tfsdk:"zone_active"`
+	ZoneId        types.String `tfsdk:"zone_id"`
+	ZoneName      types.String `tfsdk:"zone_name"`
+	ZoneProtected types.Bool   `tfsdk:"zone_protected"`
+	ZoneType      types.String `tfsdk:"zone_type"`
+}
